--- a/langs/woocommerce-jetpack.pot
+++ b/langs/woocommerce-jetpack.pot
@@ -3396,7 +3396,7 @@ msgstr ""
 msgid ""
 "Booster: Free plugin's version is limited to only one price by user role per "
 "products settings product enabled at a time. You will need to get <a href="
-"\"https://booster.io/plus/\" target=\"_blank\">Booster Plus</a> to add "
+"\"https://booster.io/buy-booster/\" target=\"_blank\">Booster Plus</a> to add "
 "unlimited number of price by user role per product settings products."
 msgstr ""
 
@@ -3849,8 +3849,8 @@ msgstr ""
 msgid ""
 "Booster: Free plugin's version is limited to only three products with per "
 "product addons enabled at a time. You will need to get <a href=\"https://"
-"booster.io/plus/\" target=\"_blank\">Booster Plus</a> to add unlimited number "
-"of products with per product addons."
+"booster.io/buy-booster/\" target=\"_blank\">Booster Plus</a> to add unlimited "
+"number of products with per product addons."
 msgstr ""
 
 #: includes/class-wcj-product-bookings.php:30
@@ -3914,9 +3914,9 @@ msgstr ""
 #: includes/class-wcj-product-bookings.php:537
 msgid ""
 "Booster: Free plugin's version is limited to only one bookings product "
-"enabled at a time. You will need to get <a href=\"https://booster.io/plus/\" "
-"target=\"_blank\">Booster Plus</a> to add unlimited number of bookings "
-"products."
+"enabled at a time. You will need to get <a href=\"https://booster.io/buy-"
+"booster/\" target=\"_blank\">Booster Plus</a> to add unlimited number of "
+"bookings products."
 msgstr ""
 
 #: includes/class-wcj-product-bulk-meta-editor.php:30
